--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
   <properties>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
-    <maven.compiler.source>8</maven.compiler.source>
-    <maven.compiler.target>8</maven.compiler.target>
+    <java.version>21</java.version>
   </properties>
 
   <modules>
@@ -36,8 +35,8 @@
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>21</source>
+          <target>21</target>
         </configuration>
       </plugin>
 
